<resources>
    <string name="app_name">Pallang</string>

    <string name="main_title">Pallang</string>
    <string name="main_no_notes">Press ＋ button to create a new note.</string>
    <string name="main_new_note">New Note</string>
    <string name="main_new_note_title">Untitled</string>
    <string name="main_select_title">%d selected</string>
    <string name="main_sort_last_mod_time">Last modified time</string>
    <string name="main_sort_create_time">Created time</string>
    <string name="main_sort_title">Title</string>
    <string name="main_sort_asc">Ascending</string>
    <string name="main_sort_desc">Descending</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_delete">Delete</string>
    <string name="main_menu_sort">Sort by</string>
    <string name="main_menu_pin">Pin to top</string>
    <string name="main_menu_unpin">Unpin</string>
    <string name="main_delete_confirm">Delete selected notes?</string>
    <string name="main_deleted">Deleted</string>
    <string name="main_pinned">Pinned selected notes</string>
    <string name="main_unpinned">Unpinned selected notes</string>

    <string name="note_hint">Enter here…</string>
    <string name="note_last_mod">Last Modified: %s</string>
    <string name="note_saved">Note Saved</string>
    <string name="note_delete_confirm">Delete this note?</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_menu_enter_edit">Edit</string>
    <string name="note_menu_save">Save Changes</string>
    <string name="note_menu_delete">Delete</string>
    <string name="note_menu_props">Properties</string>
    <string name="note_menu_share">Share</string>
    <string name="note_menu_style">Style</string>
    <string name="note_menu_style_title">Change Style</string>
    <string name="note_menu_style_sansserif">Sans-serif</string>
    <string name="note_menu_style_serif">Serif</string>
    <string name="note_menu_style_monospace">Monospace</string>
    <string name="note_menu_discard_changes">Discard changes</string>
    <string name="note_discard_changes_no_need">No changes has been made</string>
    <string name="note_discard_changes_confirm">Discard currently made changes?</string>
    <string name="note_discard_changes_done">Discarded changes</string>
    <string name="note_share_desc">Share Method</string>
    <string name="note_share_text_title">Share as text</string>
    <string name="note_share_text_desc">Send text only to other apps.\nGood for messaging or SNS.</string>
    <string name="note_share_file_title">Share as a file</string>
    <string name="note_share_file_desc">Send text as a file to other apps.\nGood for uploading to a file storage or cloud.</string>
    <string name="note_share_file_perm">Permission is required for file sharing.</string>
    <string name="note_error_invalid_id">Invalid call</string>
    <string name="note_error_note_not_found">Note not found</string>
    <string name="note_error_title_empty">Note name cannot be empty!</string>
    <string name="note_error_share_file_fail">Failed to share as a file</string>

    <string name="prop_title">Title</string>
    <string name="prop_props_pinned">Pin to Top</string>
    <string name="prop_props_markdown">Use Markdown</string>
    <string name="prop_info">Info</string>
    <string name="prop_len">Length</string>
    <string name="prop_len_format">%d character(s)</string>
    <string name="prop_creation">Created at</string>
    <string name="prop_last_mod">Last Modified at</string>
    <string name="prop_create_note">Create</string>
    <string name="prop_save_changes">Save Changes</string>
    <string name="prop_updated">Property updated</string>

    <string name="settings_title">Settings</string>
    <string name="settings_category_general">General</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_desc">Set the theme.</string>
    <string name="settings_theme_auto">System Default</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_text_size">Text Size</string>
    <string name="settings_text_size_desc">Adjust text size for notes.</string>
    <string name="settings_text_size_xxsmall">Super Extra Small</string>
    <string name="settings_text_size_xsmall">Extra Small</string>
    <string name="settings_text_size_small">Small</string>
    <string name="settings_text_size_medium">Medium</string>
    <string name="settings_text_size_large">Large</string>
    <string name="settings_text_size_xlarge">Extra Large</string>
    <string name="settings_text_size_xxlarge">Super Extra Large</string>
    <string name="settings_share_file_share">Enable sharing as a file</string>
    <string name="settings_share_file_share_desc">Add option to share notes as a file.</string>
    <string name="settings_category_troubleshoot">Troubleshooting</string>
    <string name="settings_share_file_lf_type">Newline type</string>
    <string name="settings_share_file_lf_type_desc">Select which newline type to use when sharing note as a file.</string>
    <string name="settings_share_file_lf_type_windows">Windows (CRLF) (Recommended)</string>
    <string name="settings_share_file_lf_type_unix">Unix (LF)</string>
    <string name="settings_category_manage">Data Management</string>
    <string name="settings_import">Import</string>
    <string name="settings_import_desc">Import notes from a file. WARNING: This will remove all current notes!</string>
    <string name="settings_import_dialog_title">Warning</string>
    <string name="settings_import_dialog_desc">This action will remove all current notes. Are you sure?</string>
    <string name="settings_import_error_io">Failed to import: Cannot open file.</string>
    <string name="settings_import_error_parse">Failed to import: File is not a valid Pallang backup.</string>
    <string name="settings_import_success">Import succeeded!</string>
    <string name="settings_export">Export</string>
    <string name="settings_export_desc">Export notes to a file.</string>
    <string name="settings_export_error_generic">Failed to export.</string>
    <string name="settings_export_success">Export succeeded!</string>
    <string name="settings_category_about">About</string>
    <string name="settings_license">Open Source License</string>
    <string name="settings_about" translatable="false">Pallang %s</string>
    <string name="settings_about_desc" translatable="false">© 2020-2026 sinu</string>

    <string name="share_done">Saved text as a new note</string>
    <string name="share_error">An error occurred while sharing</string>

    <string name="open_title" translatable="false">%s</string>
    <string name="open_title_text">Shared Text</string>
    <string name="open_desc">What Pallang should do with this %s?</string>
    <string name="open_desc_text">text</string>
    <string name="open_desc_file">file</string>
    <string name="open_as_new_note">Create a new note</string>
    <string name="open_update_existing">Overwrite existing note</string>
    <string name="open_preview">Preview</string>
    <string name="open_open">Open</string>
    <string name="open_skip_this_file">Skip This File</string>
    <string name="open_multiple_finished">All done</string>
    <string name="open_error_invalid_call">Invalid call</string>
    <string name="open_error_file_read_error">Cannot open file</string>

    <string name="widget_button">Note Shortcut</string>
    <string name="widget_preview">Note Preview</string>

    <string name="widget_button_conf_title">Select a note</string>
    <string name="widget_note_not_found">Note not found</string>
    <string name="widget_error_note_not_found">No notes available!</string>
    <string name="widget_button_acc">Change note</string>
    <string name="widget_new_note">Create new note</string>

    <string name="menu_more">More</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
