<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnuNoteEditSave"
        android:icon="@drawable/ic_save_24_ctrlcolor"
        android:title="@string/note_menu_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnuNoteEditMore"
        android:icon="@drawable/ic_overflow_24_ctrlcolor"
        android:title="@string/menu_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/mnuNoteEditProps"
                android:icon="@drawable/ic_info_24_ctrlcolor"
                android:title="@string/note_menu_props"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/mnuNoteEditStyle"
                android:icon="@drawable/ic_style_24_ctrlcolor"
                android:title="@string/note_menu_style"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/mnuNoteEditDiscard"
                android:icon="@drawable/ic_refresh_24_ctrlcolor"
                android:title="@string/note_menu_discard_changes"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/mnuNoteEditDelete"
                android:icon="@drawable/ic_delete_24_ctrlcolor"
                android:title="@string/note_menu_delete"
                app:showAsAction="always|withText" />
        </menu>
    </item>
</menu>